[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]

[project]
name = "compile_html"
version = "0.1.0"
description = ""
authors = [
    { name = "lutrarutra", email = "artur.gynter@proton.me"}
]
requires-python = ">=3.10"
license = {text = "MIT"}

dependencies = [
    "beautifulsoup4"
]

[project.scripts]
compile-html = "compile_html.cli:main"

[project.urls]
Repository = "https://github.com/lutrarutra/compile_html"
